Added new field to describe failure cause of failed backup/restore.
